rs-selectors/src/global.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

pre {
    white-space: pre-wrap;
    tab-size: 4
}

h1, h2, h3, h4, h5, h6 {
    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-weight: 400;
}

html {
    height: 100%;
    user-select: none;
}

body {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 100vh;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color:#d6a585;
    color: black;
    overflow-x: hidden;
}

.body__wrapper {
    overflow: hidden;
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 100vh;
    width: 100%;
}


body.body__hint_visible .help__hint {
    display: flex;
}


.content {
    display: flex;
    flex-direction: column;
    gap: 40px;
    min-height: 100vh;
    overflow-y: auto;
    flex-grow: 1;
}

.content::-webkit-scrollbar-thumb {
    background-color: #888;
}

.content:-webkit-scrollbar-thumb {
    background-color: black;
}



.container {
    max-width: 80%;
    margin: 0 auto;
}

/* ----- HEADER ----- */

header {
    flex: 0 0 auto;
}

.container_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header__logo {
    display: flex;
    align-items: center;
    opacity: 0.8;
}

.logo__image {
    height: 50px;
}

.logo__content {
}

.main__help {
    width: 80%;
    margin: 0 auto;
}

.help__btn {
    display: inline-block;
    background: linear-gradient(to bottom, #ffffff, #f1f1f1);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
    border-radius: 4px;
    border: 1px solid #ccc;
    padding: 10px;
    cursor: pointer;
    transition: all .1s linear;
}

.help__btn:hover {
    transform: scale(1.03);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.help__btn:active {
    transform: scale(1);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
}

.help__hint {
    position: absolute;
    z-index: 1000;
    top: 25vh;
    right: 25%;
    margin: 0 auto;
    padding: 10px;
    display: none;
    flex-direction: column;
    gap: 5px;
    width: 50%;
    background-color: rgba(255, 255, 255, 1);
    box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.2);
    box-shadow: -10px 30px 50px 10px rgba(0, 0, 0, 0.7);
    border-radius: 10px;
    opacity: .9;
}

.hint__content {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.help__btn:active ~ .help__hint {
    display: flex;
}


/* ----- MAIN ----- */

main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

main .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 50px;
}

.main__game {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
}

.main__title {
    font-size: 35px;
}

/* ---- FOOTER ----- */

footer {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    text-align: center;
    flex: 0 0 auto;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}


.github__image {
    height: 30px;
}

.school__image {
    position: relative;
    height: 50px;
}

.school__image::after {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 500px;
    height: 1px;
    background-color: black;

}

@media (max-width: 800px) {
    .main__title {
        font-size: 26px;
    }
}

